Update test framework and test data